--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
 .edit-nav
 {
 	border-radius: 0;
-	z-index: 1;
+	z-index: 5;
 	margin-bottom: 0px;
 	opacity: 1;
-	/*position: fixed;
+	position: fixed;
+	width: 100%;
 	/*height: 60px; */
 }
 .zero_margin
@@ -15,10 +16,13 @@
 	margin-top: 0px;
 	background-color: #ffffff;
 }
+.blank{
+	height: 80px;
+}
 .jumbo
 {
-	background-image: url('../images/header1.jpg');
-	opacity: .9;
+	background-image: url('../images/header2.jpeg');
+	opacity: 1;
 	background-repeat:no-repeat;		/* Background image dont tile up*/
 	background-size: cover;				/*for image to be covered in mobile devices*/
 	/*background-attachment: fixed;		/* Background image is fixed in the viewport so that it doesn't move when 
@@ -27,7 +31,8 @@
     										while the background image is loading */ 
     background-position: center center;	/*Background image is centered vertically and horizontally at all times */								
     width: 100%;
-    height:40vh;
+    height:50vh;
+    box-shadow: 0 0 5px 4px #282a2d;
 }
 .header{
 	vertical-align: middle;
@@ -37,10 +42,11 @@
 	font-size: 400%;
 }
 .jumbo>.header>h1{
-	color: #000;
+	color: #fff;
 	font-weight: bold;
 	font-family: cursive;
 	margin: 0px;
+	margin-top: 5%;
 	margin-left: 20%;
 }
 .jumbo>.header>h2{
@@ -48,7 +54,6 @@
 	font-family: "Algerian";
 	margin: 0px;
 	margin-left: 20%;
-	color: #000;
 }
 .top_bar
 {
@@ -69,6 +74,7 @@
 	padding-top: 70px;
 }*/
 .footer{
+	margin-top: 10px;
 	background-color: #1f1e20;
 	color: #ffffff;
 }
@@ -88,7 +94,6 @@ h1,h2,h3{
 }
 .post{
 	margin-bottom: 5%;
-	margin-top: 5%;
 }
 .btn-h1-spacing{
 	margin-top: 8px;
@@ -157,3 +162,7 @@ body{
 	border-radius: 0px;
 	margin-top: 5%;
 }
+.author-comment{
+	background-color: 
+}
+.sidebar-heading>h5{}
